--- a/session61.ipynb
+++ b/session61.ipynb
@@ -233,7 +233,7 @@
         "model.add(LSTM(256, input_shape=(X.shape[1], X.shape[2]), return_sequences=True))\n",
         "model.add(Dropout(0.1))\n",
         "model.add(LSTM(256))\n",
-        "#model.add(Dropout(0.2))\n",
+        "\n",
         "model.add(Dense(y.shape[1], activation='softmax'))\n",
         "model.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['accuracy'])"
       ],
@@ -471,7 +471,11 @@
             "\n",
             "Epoch 00039: loss improved from 1.12548 to 1.10879, saving model to /content/gdrive/My Drive/Colab Notebooks/session6/weights6.hdf5\n",
             "Epoch 40/100\n",
-            " 15872/136016 [==>...........................] - ETA: 1:03 - loss: 1.0610 - acc: 0.6777"
+            "136016/136016 [==============================] - 71s 523us/step - loss: 1.0941 - acc: 0.6669\n",
+            "\n",
+            "Epoch 00040: loss improved from 1.10879 to 1.09407, saving model to /content/gdrive/My Drive/Colab Notebooks/session6/weights6.hdf5\n",
+            "Epoch 41/100\n",
+            "114688/136016 [========================>.....] - ETA: 11s - loss: 1.0741 - acc: 0.6726"
           ],
           "name": "stdout"
         }
